Updated docker-compose.yml - update from 4.3.2-1_armhf to v4.4-armhf

--- a/unbound/unbound.conf
+++ b/unbound/unbound.conf
@@ -10,6 +10,13 @@ server:
   do-ip6: yes
   interface: 0.0.0.0
   access-control: 0.0.0.0/0 allow
+  local-data: "emoncms.home A 192.168.10.200"
+  local-data-ptr: "192.168.10.200  emoncms.home"
+  local-data: "pihole.home A 192.168.178.54"
+  local-data-ptr: "192.168.178.54  pihole.home"
+  local-data: "raspidocker001.home A 192.168.178.54"
+  local-data-ptr: "192.168.178.54  raspidocker001.home"
+
 forward-zone:
   name: "."
   forward-addr: 1.1.1.1@853
