--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   pihole:
     hostname: pihole
     container_name: pihole
-    image: pihole/pihole:4.3.2-1_armhf 
+    image: pihole/pihole:v4.4-armhf 
     restart: unless-stopped
     volumes:
       - data_1:/etc/pihole/
